hphp/hack/test/typecheck/union/map_corner_case.php.like_types.exp
File "map_corner_case.php", line 25, characters 5-17:
Invalid assignment (Typing[4110])
File "map_corner_case.php", line 13, characters 10-22:
Expected dynamic, the result of calling a dynamic type as a function
File "map_corner_case.php", line 13, characters 27-32:
But got Map<[unresolved], [unresolved]>
